SERVER-48862 Donor should not be able to start/commit a index build for a tenant at a timestamp >= recipientSyncData cmd's startMigrationDonorTimestamp